<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_chat">Чат</string>
    <string name="nav_drawer_profile">Профиль</string>
    <string name="app_name">Bonch Dev Messenger</string>
    <string name="mail_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login_hint">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="confirm_email">Подтвердить почту</string>
    <string name="change_password">Поменять пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="change">Поменять</string>
    <string name="old_password_hint">Старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="messenger_name">Light \nMessenger</string>
</resources>
